# flatten-rust

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  USAGE.md  test_output.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  update-badges.yml
benches/: performance.rs
examples/: config.toml
scripts/: build_and_test.sh  cross_build.sh
src/: config.rs  exclusions.rs  lib.rs  main.rs
tests/: integration_tests.rs
