[package]
name = "flatten-rust"
version = "0.1.0"
edition = "2021"
description = "High-performance codebase flattening tool in Rust"
authors = ["Koda CLI"]
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
memmap2 = "0.9"
rayon = "1.8"
anyhow = "1.0"
thiserror = "1.0"
indicatif = "0.17"
console = { version = "0.15", default-features = false, features = ["ansi-parsing"] }
glob = "0.3"
regex = { version = "1.10", default-features = false, features = ["std"] }
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
overflow-checks = false

[profile.release.package."*"]
codegen-units = 1

[dev-dependencies]
criterion = "0.7"

[[bin]]
name = "flatten-rust"
path = "src/main.rs"

[[bench]]
name = "performance"
harness = false
