[package]
name = "flatten-rust"
version = "0.3.1"
edition = "2024"
description = "High-performance codebase flattening tool in Rust"
authors = ["An0nX"]
license = "MIT"
repository = "https://github.com/An0nX/flatten-rust"
homepage = "https://github.com/An0nX/flatten-rust"
documentation = "https://docs.rs/flatten-rust"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
walkdir = "2.5.0"
memmap2 = "0.9.4"
rayon = "1.10.0"
anyhow = "1.0.101"
thiserror = "1.0.61"
indicatif = "0.18.3"
console = { version = "0.16.2", default-features = false, features = ["ansi-parsing"] }
glob = "0.3.1"
regex = { version = "1.12.3", default-features = false, features = ["std"] }
tempfile = "3.25.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
dirs = "6.0.0"
criterion = { version = "0.7", features = ["async_tokio"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
overflow-checks = false

[profile.release.package."*"]
codegen-units = 1

[dev-dependencies]
criterion = "0.7"

[[bin]]
name = "flatten-rust"
path = "src/main.rs"

[[bench]]
name = "performance"
harness = false
